# agent_jobmatch

./: README.md  file_path  pyproject.toml
db/: chroma.sqlite3
src/: agents.py  main.py  tasks.py
